--- a/docs-book/final_app/search.yml
+++ b/docs-book/final_app/search.yml
@@ -6,8 +6,10 @@ query:
         query: ''
         fields:
           - text
-          - title^10
-    minimum_should_match: 1
+          - title^20
+          - h2^10
+          - h3^10
+    minimum_should_match: 75%
 from: 0
 size: 10
 _source:
