--- a/docs-book/output/master_middleman/bookbinder_config.yml
+++ b/docs-book/output/master_middleman/bookbinder_config.yml
@@ -3,18 +3,19 @@
   ".": 
 :production_host: hello
 :subnav_templates:
-  myservice: myservice_subnav
+  splunk: splunk_subnav
 :template_variables: 
-:local_repo_dir: "/Users/mcholick/projects/splunk/docs-splunk"
+:local_repo_dir: "/Users/myu/docs-splunk"
 :workspace: !ruby/object:Pathname
-  path: "/Users/mcholick/projects/splunk/docs-splunk/docs-book/output/master_middleman/source"
+  path: "/Users/myu/docs-splunk/docs-book/output/master_middleman/source"
 :feedback_enabled: 
 :repo_link_enabled: true
 :repo_links:
-  myservice:
+  splunk:
     repo: docs-content
     ref: master
     at_path: 
 :product_info:
-  myservice: {}
+  splunk: {}
 :elastic_search: false
+:proof: false
